<resources>
    <string name="app_name">SimpleTodoList1</string>

    <string name="edit_item_below">Edit item below:</string>
    <string name="action_settings_Program">Program: SimpleTodoList1</string>
    <string name="action_settings">Settings</string>
    <string name="change_Background_Color">Change Background Color</string>
    <string name="action_settings2">Version 0.10</string>
    <string name="action_settings3">Dated April 9, 2015</string>
    <string name="action_settings4">Software Development Team</string>
    <string name="title_activity_edit_item">EditItemActivity</string>
</resources>
