<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gabiq.simpletodolist1.EditItemActivity">
    <item android:id="@+id/action_settings_Program"
        android:title="@string/action_settings_Program"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/change_Background_Color"
        android:title="@string/change_Background_Color"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings2"
        android:title="@string/action_settings2"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings3"
        android:title="@string/action_settings3"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings4"
        android:title="@string/action_settings4"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
